Style and fix some spacing on the screen katas section

--- a/version_control/Codurance_September2020/css/modules/fireside-chat-videos.css
+++ b/version_control/Codurance_September2020/css/modules/fireside-chat-videos.css
@@ -39,7 +39,7 @@
 {% endcall %}
 
 {% call utils.small() %}
-    .fireside-chat-video:first-of-type {
+    .fireside-chat-video {
         margin-bottom: 2em;
     }
 {% endcall %}
